--- a/package.json
+++ b/package.json
@@ -9,10 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mantine/core": "^4.2.4",
+    "@mantine/hooks": "^4.2.4",
+    "@mantine/next": "^4.2.4",
+    "@radix-ui/react-dialog": "^0.1.7",
+    "@radix-ui/react-dropdown-menu": "^0.1.6",
+    "@radix-ui/react-select": "^0.1.1",
     "@supabase/supabase-js": "^1.35.2",
+    "easymde": "^2.16.1",
+    "jotai": "^1.6.5",
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-feather": "^2.0.9",
+    "react-quill": "^1.3.5"
   },
   "devDependencies": {
     "@types/node": "17.0.31",
