--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-feather": "^2.0.9",
+    "react-hook-form": "^7.30.0",
     "react-quill": "^1.3.5"
   },
   "devDependencies": {
