--- a/package.json
+++ b/package.json
@@ -12,19 +12,22 @@
     "@mantine/core": "^4.2.4",
     "@mantine/hooks": "^4.2.4",
     "@mantine/next": "^4.2.4",
+    "@mantine/rte": "^4.2.4",
     "@radix-ui/react-dialog": "^0.1.7",
     "@radix-ui/react-dropdown-menu": "^0.1.6",
-    "@radix-ui/react-select": "^0.1.1",
     "@supabase/supabase-js": "^1.35.2",
-    "jotai": "^1.6.5",
+    "firebase": "^9.8.1",
+    "jotai": "^1.6.6",
+    "nanoid": "^3.3.4",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-feather": "^2.0.9",
     "react-hook-form": "^7.30.0",
-    "react-quill": "^1.3.5"
+    "recoil": "^0.7.3-alpha.2"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.2",
     "@types/node": "17.0.31",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.3",
