--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jotai": "^1.6.6",
     "nanoid": "^3.3.4",
     "next": "12.1.6",
+    "next-pwa": "^5.6.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-feather": "^2.0.9",
